<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.quiz.QuizFragment"
    android:layout_margin="16sp"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/quiz_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/QuizStyle"/>

        <TextView
            android:id="@+id/first_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            app:layout_constraintTop_toBottomOf="@id/quiz_title"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/QuizQuestionStyle"/>

        <RadioGroup
            android:id="@+id/first_question_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/first_question"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/QuizQuestionStyle">

            <RadioButton
                android:id="@+id/first_question_option_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_option_1">
            </RadioButton>
            <RadioButton
                android:id="@+id/first_question_option_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_option_2">
            </RadioButton>
            <RadioButton
                android:id="@+id/first_question_option_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_option_3">
            </RadioButton>
        </RadioGroup>

        <TextView
            android:id="@+id/second_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            app:layout_constraintTop_toBottomOf="@id/first_question_group"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/QuizQuestionStyle"/>

        <RadioGroup
            android:id="@+id/second_question_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/second_question"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/QuizQuestionStyle">

            <RadioButton
                android:id="@+id/second_question_option_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_option_1">
            </RadioButton>
            <RadioButton
                android:id="@+id/second_question_option_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_option_2">
            </RadioButton>
            <RadioButton
                android:id="@+id/second_question_option_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_option_3">
            </RadioButton>
        </RadioGroup>

        <TextView
            android:id="@+id/third_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            app:layout_constraintTop_toBottomOf="@id/second_question_group"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/QuizQuestionStyle"/>

        <RadioGroup
            android:id="@+id/third_question_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/third_question"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/QuizQuestionStyle">

            <RadioButton
                android:id="@+id/third_question_option_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_option_1">
            </RadioButton>
            <RadioButton
                android:id="@+id/third_question_option_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_option_2">
            </RadioButton>
            <RadioButton
                android:id="@+id/third_question_option_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_option_3">
            </RadioButton>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/third_question_group"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send_btn"

            android:text="@string/back_btn"
            style="@style/QuizQuestionStyle">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/third_question_group"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/send_btn"
            style="@style/QuizQuestionStyle">
        </com.google.android.material.button.MaterialButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>